[package]
name = "long_read_binner"
version = "0.1.0"
authors = ["wheaton5 <whheaton@gmail.com>"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
flate2 = "1.0.6"
debruijn = {git = "https://github.com/10XGenomics/rust-debruijn.git"}
dna_io = {git = "https://github.com/wheaton5/dna_io.git"}
